--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"><meta property='og:url' content="https://lukagaca.github.io/plej">
+    <meta property='og:type' content="website">
+    <meta property='og:title' content="Sažeta Istorija Plejstešjna">
+    <meta property='og:description' content="Sažeta istorija razvoja plejstejšn sistema, kao i nekolicina zanimljivih činjenica vezana za kompaniju iza famozne konzole.">
+    <meta property='og:image' content="https://github.com/lukagaca/plej/1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PS1</title>
     <link href="projekat.css" type="text/css" rel="stylesheet">
 </head>
     <body>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v12.0&appId=79957822900&autoLogAppEvents=1" nonce="CTlVSyOW"></script>
         <div id="a">
         <div id="b">
         <img src="1200px-Playstation_logo_colour.svg.png" id="ps">
@@ -36,7 +41,7 @@
             Nintendo je nakon ovih događaja uložio žalbu Federalnom sudu u SAD, u namjeri da spreči prodaju nove konzole. Temelj Nintendove tužbe bila je ta da je ime PlayStation® njihovo vlasništvo, te da je firma Soni prekršila osnove ugovora. Sudija koji je predsjedao ovom slučaju odbacio je tužbu i nije opunomoćio zabranu prodaje nove igračke konzole koja je konačno izdata 3. decembra u Japanu, i to pod nazivom PlayStation"</p>
         </div>
         <div id="e">
-            <p>Copyright &copy Sony Computer Entertainment</p>
+            <div class="fb-like" data-href="https://lukagaca.github.io/plej" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div> 
         </div>
         </div><!--end #a-->
     </body>
