--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8"><meta property='og:url' content="https://lukagaca.github.io/plej">
-    <meta property='og:type' content="website">
-    <meta property='og:title' content="Sažeta Istorija Plejstešjna">
-    <meta property='og:description' content="Sažeta istorija razvoja plejstejšn sistema, kao i nekolicina zanimljivih činjenica vezana za kompaniju iza famozne konzole.">
-    <meta property='og:image' content="https://github.com/lukagaca/plej/1.png">
+    <meta charset="utf-8"><meta property='og:url' content="https://lukagaca.github.io/plej"/>
+    <meta property='og:type' content="website"/>
+    <meta property='og:title' content="Sažeta Istorija Plejstešjna"/>
+    <meta property='og:description' content="Sažeta istorija razvoja plejstejšn sistema, kao i nekolicina zanimljivih činjenica vezana za kompaniju iza famozne konzole."/>
+    <meta property='og:image' content="https://github.com/lukagaca/plej/1.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PS1</title>
     <link href="projekat.css" type="text/css" rel="stylesheet">
