--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="projekat.css" type="text/css" rel="stylesheet">
 </head>
     <body>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBZL38KVDW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HBZL38KVDW');
+</script>
         <div id="b">
         <img src="1200px-Playstation_logo_colour.svg.png" id="ps">
         <ul>
