--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   gtag('config', 'G-HBZL38KVDW');
 </script>
+        <div id="a">
         <div id="b">
         <img src="1200px-Playstation_logo_colour.svg.png" id="ps">
         <ul>
